--- a/styles.css
+++ b/styles.css
@@ -11,24 +11,159 @@ html {
 
 .row {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1800px;
   margin: 0 auto;
+  padding-top: 28px;
+}
+
+
+ul {
+  list-style: none;
+}
+
+.purple {
+  color: #6415FF;
 }
 
 /*NAVIGATION*/
 
+
 nav {
-  max-height: 100px;
-  display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
-  padding: 0 12px;
+}
+
+.logo__img--wrapper {
+  max-width: 40%;
+  display: flex;
+  align-items: center;
+  position: absolute;
 }
 
 .logo__img {
-  max-height: 100px;
-  max-width: 100%;
-  overflow-x: none;
-  overflow-y: none;
+  height: 60px;
+  width: 100%;
+}
+
+a {
+  color: #395680;
+  font-size:20px;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.treact__link {
+  font-weight: bold;
+  font-size: 36px;
+  color: rgb(59, 59, 95);
+  padding-left: 12px;
+}
+
+.treact__link:hover {
+  color: #6415FF;
+}
+
+.nav__links {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 0;
+  right: 0;
+  bottom: -3px;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect--black:after {
+  background-color: black;
+}
+
+.nav__link-anchor:hover {
+  color: #270961;
+  text-decoration: underline #f7d957 3px;
+  transition: all 300ms ease;
+
+}
+.nav__link-anchor {
+  padding: 0 48px;
+}
+
+.sign-up__anchor:hover {
+  background-color: #270961;
+  border-color: #f7d957;
+  transition: all 400ms ease;  
+}
+
+.sign-up__anchor {
+  display: flex;
+  align-items: center;
+  color: whitesmoke;
+  border: solid #6415FF;
+  border-radius: 100px;
+  padding: 14px 32px;
+  background-color: #6415FF;
+}
+
+/*  HEADER  */
+
+h1 {
+  font-size: 64px;
+}
+.p1 {
+  font-size: 24px;
+  margin-bottom: 36px;
+  margin-top: 36px;
+}
+
+.p2 {
+  color: #d0d6df;
+  margin-top: 36px;
+  margin-bottom: 24px;
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.get-started {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px 12px;
+  border: 3px solid #d0d6df;
+  border-radius: 48px;
+}
+
+.btn {
+  font-size: 36px;
+  padding: 12px 12px;
+  color: white;
+  background-color: #6415FF;
+  border-radius: 36px;
+  border: solid ;
+}
+
+.email__imput {
+  border: none;
+  width: 50%;
+  height: 64px;
+}
+
+.header__sections {
+  display: flex;
+  align-items: center;
+}
+
+.header__section {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+.header__img {
+  width: 60%;
 }
